get random color

--- a/constantine-pod-week1.html
+++ b/constantine-pod-week1.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
+<!--get random quote -->
 <div class="container">
     <div class="row">
         <div class="col">
@@ -17,7 +18,12 @@
     </div>
 </div>
 
+<!--button to give you a random color-->
+<div id="colors">
+    <h4 id="color">Color me!</h4>
+</div>
 
+    <button id="colorBtn">Give me a color!</button>
 
 
 <script src="js/constantine-pod-week1.js"></script>
