get random colors

--- a/constantine-pod-week1.html
+++ b/constantine-pod-week1.html
@@ -19,12 +19,11 @@
 </div>
 
 <!--button to give you a random color-->
-<div id="colors">
-    <h4 id="color">Color me!</h4>
+
+
+<div class="wrapper">
+    <button id="colorBtn">click on me :)</button>
 </div>
-
-    <button id="colorBtn">Give me a color!</button>
-
 
 <script src="js/constantine-pod-week1.js"></script>
 </body>
