get random colors button working

--- a/constantine-pod-week1.html
+++ b/constantine-pod-week1.html
@@ -13,7 +13,7 @@
 <!--            <h3>Get a quote from Ron Swanson (Parks and Rec)</h3>-->
             <p id="randomQuote" class="bg-info"></p>
 
-            <button id="quoteBtn" class="btn btn-lg btn-danger">Give me a quote!</button>
+            <button id="quoteBtn">Give me a quote!</button>
         </div>
     </div>
 </div>
