--- a/rogers-html.html
+++ b/rogers-html.html
@@ -17,7 +17,7 @@
     }
 
     .container {
-        padding-top: 2rem;
+        /*padding-top: 2rem;*/
         /*margin: auto;*/
         /*justify-content: center;*/
     }
@@ -50,17 +50,16 @@
     <h1>Roger's Labs</h1>
     <hr>
 </div>
-<div class="container d-flex row-1 m-0">
-
-    <div class="col-5 d-flex">
-        <div class="row-1">
+<div class="container d-flex row-1">
+    <div class="col-6 d-flex justify-content-between">
+        <div class="d-flex ">
             <form action="">
                 <input class="push" id="color" name="color" type="text" placeholder="background color">
                 <button id="submit" class="push">Click</button>
             </form>
         </div>
     </div>
-    <div class="col-5 d-flex">
+    <div class="col-6 d-flex">
         <div class="d-flex row-1">
             <form action="">
                 <input class="pushTwo" id="js" name="number" type="text" placeholder="number between 1-10">
@@ -68,10 +67,34 @@
             </form>
         </div>
     </div>
-    <div class="col-2">
-        <h2></h2>
-    </div>
+
 </div>
+<div class="">
+    <h2></h2>
+</div>
+<!--<div class="containerTwo d-flex row-1 m-0">-->
+<!--    <div class="col-4 d-flex">-->
+<!--        <div class="row-1">-->
+<!--            <form action="">-->
+<!--                <input class="push" id="color" name="color" type="text" placeholder="background color">-->
+<!--                <button id="submit" class="push">Click</button>-->
+<!--            </form>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="col-4 d-flex">-->
+<!--        <div class="d-flex row-1">-->
+<!--            <form action="">-->
+<!--                <input class="pushTwo" id="js" name="number" type="text" placeholder="number between 1-10">-->
+<!--                <button id="submitTwo" class="pushTwo">Click</button>-->
+<!--            </form>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="col-4">-->
+<!--        <h2></h2>-->
+<!--    </div>-->
+<!--</div>-->
+
+
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
